Read Restore sections in storage order